myteo/test/parser/comment/unterminated_block.exp
ERROR: test/parser/comment/unterminated_block.myte:3:2 Unexpected <EOF>
 3 | /*
   |   ^